--- a/Indigo.css
+++ b/Indigo.css
@@ -274,6 +274,7 @@ div.topic-nav {
 .dropdown-header {
 	color: var(--white);
 }
+
 /* Class Selectors */
 .alert-info {
 	background-color: var(--grey2);
@@ -394,7 +395,7 @@ div.topic-nav {
 	border-bottom: 1px solid var(--link_local);
 }
 
-.devices .row .col-sm-10 table.table thead > tr > th:hover {
+.devices .row .col-sm-10 table.table thead>tr>th:hover {
 	background-color: var(--link_local_hover);
 }
 
@@ -527,16 +528,24 @@ div.topic-nav {
 	background-color: var(--black);
 }
 
+.postbody div.content blockquote {
+	border-left: 5px solid var(--grey4);
+	background-color: var(--grey3);
+	border-top: 1px dashed var(--grey3);
+	border-bottom: 1px dashed var(--grey3);
+	border-right: 1px dashed var(--grey3);
+}
+
 .resellers .panel-heading {
 	background-image: linear-gradient(var(--grey1), var(--black));
 }
 
 .row.search.post.bg1 {
-    background-color: var(--grey1);
+	background-color: var(--grey1);
 }
 
 .row.search.post.bg2 {
-    background-color: var(--grey2);
+	background-color: var(--grey2);
 }
 
 .selected {
@@ -715,4 +724,3 @@ div.topic-nav {
 #trial-checkbox.checkbox label {
 	color: var(--grey8);
 }
-
