--- a/Meta Stack Overflow.css
+++ b/Meta Stack Overflow.css
@@ -1,12 +1,3 @@
-/*
-Custom CSS stylesheet for the Meta Stack Overflow web site.
-Author: DaveL17
-Version: 1.0
-License: MIT
-
-Note: IDEs may balk on var resolution. This is normal.
-*/
-
 :root {
 	--main_background: #222222;
 }
@@ -34,12 +25,38 @@ body {
 	--mp-highlight-literal-color: var(--green-500);
 	--mp-label-color: #555555;
 	--mp-link-color: yellow;
-	--mp-main-bg-color: var(--white);
+	--mp-main-bg-color: #777777;
 	--mp-muted-color: #333333;
 	--mp-popup-shadow: var(--bs-sm);
 	--mp-query-border-color: var(--black-100);
 	--mp-result-border: solid .5px var(--black-300));
 	--mp-warning-color: var(--red-600);
+}
+
+.site-footer {
+	background-color: #333333;
+	background-image: none;
+	background-position: var(--theme-footer-background-position);
+	background-repeat: var(--theme-footer-background-repeat);
+	border-top: var(--theme-footer-background-border-top);
+	background-size: var(--theme-footer-background-size);
+	color: var(--theme-footer-text-color);
+	padding-top: var(--theme-footer-padding-top);
+	padding-bottom: var(--theme-footer-padding-bottom);
+}
+
+.top-bar {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 5050;
+	background-color: #333333;
+	transition: box-shadow cubic-bezier(.165, .84, .44, 1) .25s;
+	height: 50px;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	box-sizing: border-box;
+	border-top: 3px solid var(--theme-primary-color));
 }
 
 #content {
@@ -57,5 +74,5 @@ body {
 }
 
 .question-hyperlink, .question-hyperlink:visited, .answer-hyperlink:visited {
-color: #888888;
+	color: #888888;
 }
